--- a/ecma-sl.opam
+++ b/ecma-sl.opam
@@ -29,7 +29,7 @@ depends: [
   "tls-lwt"
   "yojson"
   "conf-npm"
-  "smtml" {>= "0.7.0"}
+  "smtml" {= "0.7.0"}
   "ppx_import"
   "ppx_deriving"
   "mdx" {with-test}
@@ -55,3 +55,6 @@ build: [
   ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/formalsec/ECMA-SL.git"
+pin-depends: [
+  [ "smtml.0.7.0" "https://github.com/formalsec/smtml.git#v0.7.0" ]
+]
