--- a/ecma-sl.opam
+++ b/ecma-sl.opam
@@ -56,5 +56,5 @@ build: [
 ]
 dev-repo: "git+https://github.com/formalsec/ECMA-SL.git"
 pin-depends: [
-  [ "smtml.0.7.0" "https://github.com/formalsec/smtml.git#v0.7.0" ]
+  [ "smtml.0.7.0" "git+https://github.com/formalsec/smtml.git#v0.7.0" ]
 ]
