--- a/ecma-sl.opam.template
+++ b/ecma-sl.opam.template
@@ -1,3 +1,3 @@
 pin-depends: [
-  [ "smtml.0.7.0" "https://github.com/formalsec/smtml.git#v0.7.0" ]
+  [ "smtml.0.7.0" "git+https://github.com/formalsec/smtml.git#v0.7.0" ]
 ]
